Fixed long filename wrapping issue in document chooser table

--- a/client/scss/components/_listing.scss
+++ b/client/scss/components/_listing.scss
@@ -50,6 +50,7 @@ ul.listing {
 
   td {
     vertical-align: middle;
+    overflow-wrap:anywhere;
   }
 
   td.title {
